# blender-agent

./: .dockerignore  .gitignore  .gitlab-ci.yml  .mcp.json  .mcpbignore  Dockerfile  Makefile  README.md  manifest.json  readme.md
agent/: pyproject.toml  readme.md
agent/blagent/: __init__.py  __main__.py  agent_tools.py  app.py  blender_surface.py  blender_tools.py  chat_api.py  engine.py  llm.py  local_llm.py  media.py  reviewer.py  runtime.py  store.py  tools.py
agent/blagent/data/: system_prompt.md
agent/blagent/data/skills/: boolean-modeling.md  fillets-and-bevels.md  lighting-setups.md  make-manifold.md  texturing-basics.md
agent/blagent/web/: app.js  index.html  styles.css
agent/blagent/web/components/: artifact-panel.js  chat-stage.js  composer.js  json-view.js  local-llm-panel.js  session-list.js  settings-modal.js  stl-viewer.js
agent/blagent/web/core/: brand.js  icons.js  llm-output-parser.js  local-llm-controller.js  local-llm-engine.js  local-llm-worker.js  markdown.js  store.js  theme.js  webllm-host.js  widgets.js
agent/docs/: context-compaction.md
mcp_ext/: pyproject.toml  readme.md
mcp_ext/blmcp_ext/: __init__.py
mcp_ext/blmcp_ext/media/: Makefile  __init__.py  tools.py
mcp_ext/blmcp_ext/media/blmedia/: __init__.py
mcp_ext/blmcp_ext/media/tests/: bl_run.py  test_blmedia.py
mcp_ext/blmcp_ext/rigging/: Makefile  PROGRESS.md  __init__.py  readme.md  tools.py
mcp_ext/blmcp_ext/rigging/blrig/: __init__.py  _armature.py  api.py
mcp_ext/blmcp_ext/rigging/corpus/: __init__.py  assets.py  characters.py
mcp_ext/blmcp_ext/rigging/evals/: scenarios.json
mcp_ext/blmcp_ext/rigging/tests/: bl_run_all.py  deform_corpus.py  fixtures.py  render_golden.py  test_anim_ops.py  test_perception.py  test_pose_ops.py  test_skill_character.py  test_skill_legged.py  test_skill_mechanical.py  test_skill_multipart.py  test_skill_quadruped_multipart.py  test_skill_spider.py  test_standard.py  test_weight_ops.py
(+166 files in other folders)
